# traact_component_cereal

./: .gitignore  CMakeLists.txt  README  conanfile.py
include/traact/: traact_serialization_export.h
include/traact/cereal/: CerealFilePlayerComponent.cpp  CerealFileReaderComponent.cpp  CerealFileRecorderComponent.cpp  CerealFileWriterComponent.cpp  CerealSpatial.cpp  CerealSpatial.h  CerealVision.cpp  CerealVision.h
src/traact/: traact_serialization_export.h
src/traact/cereal/: CerealFilePlayerComponent.cpp  CerealFileReaderComponent.cpp  CerealFileReaderWriterComponent.cpp  CerealFileRecorderComponent.cpp  CerealFileWriterComponent.cpp  CerealSpatial.cpp  CerealSpatial.h  CerealVision.cpp  CerealVision.h
